Manage municipality and neighborhood
