# own_modules/order_bridge/models/__init__.py
@@ -1,6 +1,7 @@
 # Part of Odoo. See LICENSE file for full copyright and licensing details.
 
 from . import device
+from . import municipality
 from . import partner_address
 from . import product_template
 from . import res_company
